--- a/proj/ThreadSafeMemoryPool.xcodeproj/xcshareddata/xcschemes/MemoryPoolTests.xcscheme
+++ b/proj/ThreadSafeMemoryPool.xcodeproj/xcshareddata/xcschemes/MemoryPoolTests.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B609387022ACEFF0008B7C1E"
-               BuildableName = "ThreadSafeMemoryPool"
-               BlueprintName = "ThreadSafeMemoryPool"
+               BuildableName = "MemoryPoolTests"
+               BlueprintName = "MemoryPoolTests"
                ReferencedContainer = "container:ThreadSafeMemoryPool.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B609387022ACEFF0008B7C1E"
-            BuildableName = "ThreadSafeMemoryPool"
-            BlueprintName = "ThreadSafeMemoryPool"
+            BuildableName = "MemoryPoolTests"
+            BlueprintName = "MemoryPoolTests"
             ReferencedContainer = "container:ThreadSafeMemoryPool.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -57,8 +57,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B609387022ACEFF0008B7C1E"
-            BuildableName = "ThreadSafeMemoryPool"
-            BlueprintName = "ThreadSafeMemoryPool"
+            BuildableName = "MemoryPoolTests"
+            BlueprintName = "MemoryPoolTests"
             ReferencedContainer = "container:ThreadSafeMemoryPool.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -76,8 +76,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B609387022ACEFF0008B7C1E"
-            BuildableName = "ThreadSafeMemoryPool"
-            BlueprintName = "ThreadSafeMemoryPool"
+            BuildableName = "MemoryPoolTests"
+            BlueprintName = "MemoryPoolTests"
             ReferencedContainer = "container:ThreadSafeMemoryPool.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
